--- a/app/templates/core/home.html
+++ b/app/templates/core/home.html
@@ -99,8 +99,8 @@
     <!-- YouTube Tools Section -->
     <div class="row mb-4">
         <div class="col-12">
-            <h3 class="mb-3">
-                <img src="{{ url_for('static', filename='img/templates/yt_icon_almostblack_digital.png') }}" alt="YouTube" style="width: 28px; height: 28px; margin-right: 0.5rem;">
+            <h3 class="mb-3" style="display: flex; align-items: center;">
+                <img src="{{ url_for('static', filename='img/templates/yt_icon_red_digital.png') }}" alt="YouTube" style="width: auto; height: 32px; margin-right: 0.5rem;">
                 YouTube Tools
             </h3>
         </div>
