--- a/app/templates/thumbnail/index.html
+++ b/app/templates/thumbnail/index.html
@@ -137,8 +137,9 @@
 
                 <!-- Generate Button -->
                 <button class="generate-btn" id="generateBtn" onclick="generateThumbnail()">
-                    <i class="ph ph-magic-wand"></i>
-                    Generate
+                    <i class="ph ph-magic-wand button-icon"></i>
+                    <i class="ph ph-spinner button-spinner spin" style="display: none;"></i>
+                    <span class="button-text">Generate</span>
                 </button>
             </div>
 
